--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -11,12 +11,12 @@
       <h4>Best Picks</h4>
     </div>
     <div>
-      <div class = "w3-container w3-third hidden">
+      <div class = "w3-container w3-third ">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
           </div>
         </div>
         
@@ -27,10 +27,10 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
           </div>
         </div>
         
@@ -42,10 +42,10 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
-            <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
+            <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
     <div>
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -76,7 +76,7 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -91,7 +91,7 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -111,7 +111,7 @@
     <div>
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src =  "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src =  "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -126,7 +126,7 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -141,7 +141,7 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -158,7 +158,7 @@
     <div>
         <div class = "w3-container w3-third hidden">
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-            <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+            <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -173,7 +173,7 @@
         
         <div class = "w3-container w3-third hidden">
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-            <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+            <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -188,7 +188,7 @@
         
         <div class = "w3-container w3-third hidden">
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-            <img src = "../../assets/images/resume.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+            <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
