--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+	height: 100%;
+	/*Image only BG fallback*/
+	background: url('http://thecodeplayer.com/uploads/media/gs.png');
+	/*background = gradient + image pattern combo*/
+	background: 
+		linear-gradient(rgba(29, 0, 196, 0.2), rgba(23, 94, 199, 0.2));
+}
+
+body {
+	font-family: montserrat, arial, verdana;
+}
+
+
+
+
+
+
