--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -13,7 +13,7 @@
     <div>
       <div class = "w3-container w3-third ">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/fresher1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
@@ -27,7 +27,7 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/Pro_temp1.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
@@ -35,14 +35,14 @@
         </div>
         
         <div class = "w3-center">
-          <p>Experienced</p>
+          <p>Professional</p>
         </div>
         
       </div>
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/intern1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a  class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;" routerLink="/form1" routerLinkActive="active">Use Template</a>
@@ -51,7 +51,7 @@
       </div>
       
       <div class = "w3-center">
-          <p>Fresher</p>
+          <p>Intern</p>
       </div>
     </div>
     
@@ -61,7 +61,7 @@
     <div>
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/Pro_temp1.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -76,7 +76,7 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/pro_temp2.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -111,7 +111,7 @@
     <div>
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src =  "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src =  "../../assets/images/fresher1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -155,10 +155,13 @@
       </div>
     </div>
 
+
+    <div class = "w3-container w3-padding-large">
+      <h4>Interns</h4>
     <div>
         <div class = "w3-container w3-third hidden">
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-            <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+            <img src = "../../assets/images/intern1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -166,14 +169,14 @@
           </div>
           
           <div class = "w3-center">
-            <p>Fresher 4</p>
+            <p>Intern 1</p>
           </div>
           
         </div>
         
         <div class = "w3-container w3-third hidden">
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-            <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+            <img src = "../../assets/images/intern2.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -181,14 +184,14 @@
           </div>
           
           <div class = "w3-center">
-            <p>Fresher 5</p>
+            <p>Intern 2</p>
           </div>
           
         </div>
         
         <div class = "w3-container w3-third hidden">
           <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-            <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+            <img src = "../../assets/images/intern3.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
               <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
@@ -196,11 +199,13 @@
           </div>
           
           <div class = "w3-center">
-            <p>Fresher 6</p>
+            <p>Intern 3</p>
           </div>
           
         </div>
       </div>
+      </div>
+
     
   </div>
   
