--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <div class = "w3-row-padding" style = "width: 400px;">
   
           <div class = "w3-col" style = "width: 45%;">
-            <a class = "w3-btn w3-blue w3-padding w3-round w3-animate-right" style = "animation-delay: 0.4s; width: 160px;" href="/home/#login">Create my resume</a>
+            <a class = "w3-btn w3-blue w3-padding w3-round w3-animate-right" style = "animation-delay: 0.4s; width: 160px;" href="#login">Create my resume</a>
           </div>
           
           <div class = "w3-col" style = "width: 45%">
