--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -126,7 +126,7 @@
       
       <div class = "w3-container w3-third hidden">
         <div class = "w3-white w3-card w3-round hover-expand w3-display-container" style = "height: 300px; margin-bottom: 16px;">
-          <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
+          <img src = "../../assets/images/fresher 2.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a href = "#" class = "w3-btn w3-blue w3-round" style = "width: 100%;">View</a>
             <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
