--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -1,9 +1,25 @@
 <div class = "w3-light-grey">
-    <div class = "w3-container w3-center" style = "margin-top: 20px; margin-bottom: 20px;">
-    <h1 class = "w3-xxlarge" style = "font-family: Montserrat"><span class = "w3-xxlarge w3-text-red">View</span> Templates</h1>
-    <p>Choose from our best collections of resume templates</p>
-  </div>
-  <!-- Header End -->
+    <!-- Header -->
+		
+		<!-- Top Nav -->
+		
+        <div class = "w3-bar w3-padding w3-white w3-card-4" style = "top: 0px;">
+          <div style="">
+            <a  class = "w3-bar-item w3-hover-text-red "routerLink="/**" routerLinkActive="active">Home</a>
+            <a href = "javascript: return false;" class = "w3-bar-item w3-hover-text-red" routerLink="/templates" routerLinkActive="active">Templates</a>
+            <div class = "w3-right w3-bar-item w3-padding w3-padding-right">
+            <a  class = "w3-blue w3-round w3-padding" routerLink="/profile" routerLinkActive="active">My Account<i class = "fa fa-edit" style = "margin-left: 16px;"></i></a>
+            <a class = "w3-red w3-round w3-padding" routerLink="/**" routerLinkActive="active">Logout<i class = "fa fa-power-off" style = "margin-left: 16px; margin-right: 16px;"></i></a>
+            </div>
+          </div>
+        </div>
+				
+		<!-- Top Nav End -->
+		<div class = "w3-container w3-center" style = "margin-top: 20px; margin-bottom: 20px;">
+			<h1 class = "w3-xxlarge" style = "font-family: Montserrat"><span class = "w3-xxlarge w3-text-red">Templates</span></h1>
+			<p>Choose from our best collections of resume templates</p>
+		</div>
+		<!-- Header End -->
   
   <!-- Content -->
   <div class = "w3-container w3-content w3-card-4 w3-white w3-round" style = "margin-bottom: 50px; padding-bottom: 50px;">
